[package]
name = "uefi-exfat"
version = "0.1.0"
edition = "2021"
authors = ["UEFI exFAT Contributors"]
description = "An exFAT driver for UEFI written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rexlunae/uefi-exfat"

[lib]
crate-type = ["staticlib"]

[dependencies]
uefi = { version = "0.36", features = ["alloc"] }
log = { version = "0.4", default-features = false }

[build-dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 2
